altered PluginTests to use a test configuration for rhsm.pluginDir and rhsm.pluginConfDir